--- a/Bootstap/website_prac.html
+++ b/Bootstap/website_prac.html
@@ -151,6 +151,32 @@
               </div>
           </form>
 
+          <div class="box">
+
+            <table class="table table-striped">
+              <th class="table-success">Name</th>
+              <th class="table-success">Age</th>
+              <th class="table-success">DOB</th>
+            <tr>
+              <td class="table-warning">data</td>
+              <td class="table-warning">data</td>
+              <td class="table-warning">data</td>
+            </tr>
+            <tr>
+              <td class="table-warning">data</td>
+              <td class="table-warning">data</td>
+              <td class="table-warning">data</td>
+            </tr>
+            <tr>
+              <td class="table-warning">data</td>
+              <td class="table-warning">data</td>
+              <td class="table-warning">data</td>
+            </tr>
+          </table>
+
+        </div>
+
+        
 
     <!-- js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
